# PythonContactsAPI

./: .coverage  .gitignore  README.md  alembic.ini  docker-compose.yml  example.env  main.py  pyproject.toml  requirements.txt  settings.ini
alembic/: env.py
alembic/versions/: 30857e37d1f1_.py  39869c8e4a4d_.py  77421db8d71e_init.py  b380799ee7d1_init.py  eeac5d0aed78_.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  (+1 more)
htmlcov/: d_145eef247bfb46b6___init___py.html  d_145eef247bfb46b6_schemas_py.html  d_53606e9522d39d55_auth_py.html  d_53606e9522d39d55_contacts_py.html  d_53606e9522d39d55_users_py.html  d_57fdb4e82e728119_auth_py.html  d_57fdb4e82e728119_contacts_py.html  d_67f6f9a13eff1831_auth_py.html  d_67f6f9a13eff1831_email_py.html  d_83bb46b0261c7dc5_config_py.html  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_repository_auth_py.html  d_a44f0ac069e85531_test_repository_contact_py.html  d_a44f0ac069e85531_test_route_auth_py.html  d_a44f0ac069e85531_test_route_contact_py.html  d_a44f0ac069e85531_test_route_user_py.html  d_f1aa34bc7b1afc18_connect_py.html  d_f1aa34bc7b1afc18_models_py.html  index.html  main_py.html  status.json
src/: __init__.py  schemas.py
src/conf/: config.py
src/database/: __init__.py  connect.py  models.py
src/repository/: __init__.py  auth.py  contacts.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_repository_auth.py  test_repository_contact.py  test_route_auth.py  test_route_contact.py  test_route_user.py
(+9 files in other folders)
