[tool.poetry]
name = "pythoncontactsapi"
version = "0.1.0"
description = ""
authors = ["IrinaShushkevych <iraolijnyk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
SQLAlchemy = "^2.0.1"
psycopg2-binary = "^2.9.5"
configparser = "^5.3.0"
alembic = "^1.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
